--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Coming+Soon&family=Gloria+Hallelujah&family=Open+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Anton&family=Jura:wght@300;400;500;700&display=swap" rel="stylesheet">
     <!-- Bootstrap CSS -->
@@ -22,7 +21,7 @@
     <!-- Image and text -->
     <nav class="navbar">
         <a class="navbar-brand" href="#">
-        <img src="/images/Birch.png" width="30" height="30" class="d-inline-block align-top" alt="">
+        <img src="Birch.png" width="30" height="30" class="d-inline-block align-top" alt="">
         Life in the Present
         </a>
         <div class="navitems">
