--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- Image and text -->
     <nav class="navbar">
         <a class="navbar-brand" href="#">
-        <img src="../images/Birch.png" width="30" height="30" class="d-inline-block align-top" alt="">
+        <img src="./images/Birch.png" width="30" height="30" class="d-inline-block align-top" alt="">
         Life in the Present
         </a>
         <div class="navitems">
