--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <p>
           <span class="tagline">If you've ever struggled to pick out the perfect gift, we have a solution for you. </span>
           <br> <br>
-          Immerse yourself in a reality where you can create a space that perfectly reflects your personal style, and explore friends' homes they've curated to their tastes. View their wishlists, add to a shopping list, and puchase a gift straight from the app. 
+          Immerse yourself in a reality where you can create a space that perfectly reflects your style, and explore friends' homes they've curated to their tastes. View their wishlists, add to a shopping list, and puchase a gift straight from the app. 
           <br><br>
           Whether you prefer mobile or VR, don't let gift-giving be overwhelming - try Life in the Present and start having fun today. 
         </p>
