--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <br> <br>
           Immerse yourself in a reality where you can create a space that perfectly reflects your style, and explore friends' homes they've curated to their tastes. View their wishlists, add to a shopping list, and puchase a gift straight from the app. 
           <br><br>
-          Whether you prefer mobile or VR, don't let gift-giving be overwhelming - try Life in the Present and start having fun today. 
+          Whether you prefer mobile or VR, don't let gift-giving be overwhelming - try Life in the Present and start having fun today! 
         </p>
         <button type="button" class="btn btn-primary">Learn more</button>
 
