updates for responsive

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </div>
     <!--Product area code-->
     <section>
-    <div class="productarea">
+    <div class="productarea container">
       <div>
         <img src="./images/LIP combo birch.png" alt="">
         </div>
