--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
           <h1 class="display-4">Experience a new type of connection</h1>
-          <p class="lead">Express yourself. Explore your friend's styles. Have fun giving & receiving gifts.</p>
+          <p class="lead">Express yourself. Explore your friends' styles. Have fun giving & receiving gifts.</p>
         </div>
       </div>
     <!--Product area code-->
